--- a/calculators/area-calculator.html
+++ b/calculators/area-calculator.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>The Calculator</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-  <link href="/style.css" rel="stylesheet">
+  <link href="../style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
