--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   </div>
   <div class="container">
     <h2>About</h2>
-    <p>Welcome to The Calculator, a website developed through the power of boredom.<br><br>Version 2 - the website now looks somewhat presentable<br><br><b>Some calculations may be incorrect. Check the accuracy of important information.</b></p>
-    <br><br>
+    <p>Welcome to The Calculator. Use this website for whatever trivial calculations you may need to perform.</p><p><b>Some calculations may be incorrect. Check the accuracy of important information.</b></p>
   </div>
   <script src="script.js"></script>
 </body>
